[project]
name = "kokoro-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gradio-client>=1.3.0",
    "numpy>=1.24.4",
    "openai>=1.74.0",
    "pydub>=0.25.1",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.1",
]
